--- a/src/Makefile
+++ b/src/Makefile
@@ -5,11 +5,12 @@ LDFLAGS=`cat ../.libs`
 ELFLAGS=`cat ../.elflags`
 ARCHFLAGS=`cat ../.archflags`
 INCLUDEDIRS=-I../include
-OBJS=pipc.o
+OBJS=mm.o pipc.o
 TARGET=libpipc.so
 SYSLIBDIR=`cat ../.dirlib`
 
 all:
+	${CC} ${ECFLAGS} ${CCFLAGS} ${ARCHFLAGS} ${INCLUDEDIRS} -c mm.c
 	${CC} ${ECFLAGS} ${CCFLAGS} ${ARCHFLAGS} ${INCLUDEDIRS} -c pipc.c
 	${CC} -shared -o ${TARGET} ${OBJS} ${LDFLAGS} ${ELFLAGS}
 
